* What is new in gsl-1.12+:

** The functions gsl_linalg_LU_solve, gsl_linalg_LU_svx,
   gsl_linalg_LU_refine and gsl_linalg_LU_invert, now return an error
   for singular matrice.

** The multifit LMDER hybrid solvers now check the return code of the
   user-supplied function in the gsl_multifit_fdfsolver_set method.

** Improved the implementation of gsl_ran_discrete_preproc to avoid
   internal errors due to inconsistencies from excess precision on
   some platforms.

** Corrected gsl_sf_hyperg_2F1(a,b,c,x) to not give a domain error in
   the case where c is a negative integer and the series terminates
   with a finite result.

** The C99 inline keyword is now supported, in addition to the
   previously supported GNU-style inline.

** Modified gsl_poly_complex_solve_cubic and gsl_poly_solve_cubic to
   avoid returning NaNs in cases where excess precision causes a
   change in the number of roots.

** Fixed incorrect length check in gsl_blas_drotm

** Fixed gsl_odeiv_step_gear2 to restore y on step failure

** gsl_odeiv_evolve_apply now restores the correct value of t on step
   failures [bug #26255].

** Using make install prefix=DIR now puts correct paths in package
   config files gsl-config and gsl.pc

** Modified gsl_monte_vegas to work around pow() function inaccuracies
   on MinGW [bug #25413].

** Increased the number of terms in gsl_sf_mathieu_a and
   gsl_sf_mathieu_b to improve convergence in difficult regions [bug
   #25075]

* What was new in gsl-1.12:

** Upgraded to latest libtool, autoconf and automake (libtool-2.2.6,
   autoconf-2.63, automake-1.10.2)

** Improved the convergence of gsl_sf_gamma_inc_P for x/a ~=~ 1 and
   large x,a.  Fixes problems with large arguments in cdf functions
   such as gsl_cdf_chisq_Pinv(x,nu) [bug 24704].

** Fixed gsl_ran_gamma_knuth to handle the case of a >= UINT_MAX [bug
   #24897]

** Added gsl_bspline_eval_deriv to compute bspline derivatives
   (Rhys Ulerich)
