@@ -1,3 +1,10 @@
+2009-06-28  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test.c (check_full): allow for case where err_est is zero.
+
+	* levin_u.c (gsl_sum_levin_u_minmax): handle the special case
+	where the sum has the form 1+0+0+0+... by ignoring trailing zeros.
+
 2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>
 
 	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir
