@@ -1,5 +1,9 @@
 * What is new in gsl-1.12+:
 
+** The function gsl_sum_levin_u_accel now handles the special case
+   c_0 + 0 + 0 + 0 + .... that occurs when summing power series
+   c_n*x^n with x=0.
+
 ** The functions gsl_linalg_LU_solve, gsl_linalg_LU_svx,
    gsl_linalg_LU_refine and gsl_linalg_LU_invert, now return an error
    for singular matrice.
